Implementado integração com a API de CRUD e os devidos testes unitários

--- a/Duffnization.API/Duffnization.Test/Duffnization.Test.csproj
+++ b/Duffnization.API/Duffnization.Test/Duffnization.Test.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Duffnization.CRUD\Duffnization.CRUD.csproj" />
     <ProjectReference Include="..\Duffnization.Spotfy\Duffnization.Spotify.csproj" />
   </ItemGroup>
 
