Consumo da biblioteca de busca de playlists no Spotify e mapeamento dos objetos. Escolha de playlist aleatória.

--- a/Duffnization.API/Duffnization.API/Duffnization.API.csproj
+++ b/Duffnization.API/Duffnization.API/Duffnization.API.csproj
@@ -39,6 +39,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Duffnization.Business\Duffnization.Business.csproj" />
+    <ProjectReference Include="..\Duffnization.CRUD\Duffnization.CRUD.csproj" />
+    <ProjectReference Include="..\Duffnization.Spotfy\Duffnization.Spotify.csproj" />
   </ItemGroup>
 
 </Project>
