--- a/Duffnization.API/Duffnization.API/appsettings.json
+++ b/Duffnization.API/Duffnization.API/appsettings.json
@@ -9,6 +9,19 @@
   "Jwt": {
     "Issuer": "Duffnization",
     "Audience": "Duffnization",
-    "Key": "D0DAB652-2EF7-45D1-B91A-1B35017B3DC3'"
+    "Key": "D0DAB652-2EF7-45D1-B91A-1B35017B3DC3'",
+    "Username": "admin",
+    "Password": "admin"
+  },
+  "CRUD": {
+    "Username": "admin",
+    "Password": "admin",
+    "BaseURL": "http://localhost:8000"
+  },
+  "Spotify": {
+    "AuthUrl": "https://accounts.spotify.com/api/token",
+    "ClientId": "34b45dce9d654dd4988b6181831e6106",
+    "ClientSecret": "2615bd6157054f0b85a4a15d94abc424",
+    "BaseApiUrl": "https://api.spotify.com"
   }
 }
