Adicionado ao gitignore a pasta deploy

--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,4 @@ compile_commands.json
 /Duffnization.API/Duffnization.Spotfy/obj
 /Duffnization.API/Duffnization.Test/obj
 /Duffnization.API/Duffnization.CRUD/obj
+/Duffnization.API/Duffnization.API/deploy
