Comando start e deploy no packge.json

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,4 @@ compile_commands.json
 /Duffnization.API/Duffnization.Test/obj
 /Duffnization.API/Duffnization.CRUD/obj
 /Duffnization.API/Duffnization.API/deploy
+/Duffnization.CRUD.API/deploy
